# ResultF

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/resultf/: result_func.hpp
test/resultf/: CMakeLists.txt
test/resultf/result_func/: result_func.cpp
